# fbp

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  Rocket.toml  diesel.toml
conf/: nginx.conf  timeout.conf
docker/: Dockerfile  compose.yml  init-letsencrypt.sh
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  Globals.js  Requests.js  index.js
migrations/2021-05-08-140826_create_primes/: down.sql  up.sql
src/: main.rs  prime.rs
src/prime/: db.rs  mod.rs  model.rs  schema.rs  utils.rs
tests/: test.sh
