[package]
name = "fbp"
version = "0.1.0"
authors = ["bow <pro.lpascal@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.7"
primes = "0.3.0"
diesel = { version = "1.4.0", features = ["sqlite", "numeric"   ] }

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["diesel_sqlite_pool"]
